Fixes #10360: Directive \"Migrate\" button is stuck to the version dropdown list

--- a/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -116,11 +116,5 @@
   padding:0 0 0 15px;
 }
 .version-group select.form-control{
-  border-top-right-radius:0;
-  border-bottom-right-radius:0;
-}
-.version-group + .btn{
-  border-left:none;
-  border-top-left-radius:0;
-  border-bottom-left-radius:0;
+  margin-right:5px;
 }
